feat: [demo-single-collection]新增单体集合各模块测试类